# local-ai-brain

./: .agy-prompt.md  .env.test  .gitignore  .pr-comment-3.md  .pr-comment.md  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  PRD.md  README.md  _fix_prompt.md  agy-fix-prompt.txt  com.localbrain.api.newsyslog.conf  com.localbrain.api.plist  diff.patch  diff.txt  llm_config.yaml  local-ai-brain-architecture.html  pr-comment-findings.md  pyproject.toml  review-body.md  threads.json
.agents/skills/bump-version/: SKILL.md
.agents/skills/llm-update/: SKILL.md
.agents/skills/restart-dev/: SKILL.md
.agents/skills/run-dev/: SKILL.md
.agents/skills/start-backends/: SKILL.md
.agents/skills/tail-logs/: SKILL.md
.agents/skills/update-deps/: SKILL.md
.agents/skills/vllm-update/: SKILL.md
.github/workflows/: auto_release.yml  ci.yml  gatekeeper.yml  production_release.yml
scripts/: install_helpers.py  install_prod.sh  start_llm.sh  start_server.sh
src/local_ai_brain/: __init__.py  cli.py  config.py  logging.py  main.py  metrics.py  middleware.py
src/local_ai_brain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/local_ai_brain/api/: audio.py  chat.py  models.py
src/local_ai_brain/models/: llm_server.py  stt_server.py  tts_server.py
src/local_ai_brain/schemas/: __init__.py  audio.py  chat.py
tests/: test_api.py  test_cli.py  test_config.py  test_installer.py  test_llm_server.py  test_metrics.py  test_middleware.py  test_proxy_semaphore.py  test_sampling_params.py  test_schemas.py  test_stt_server.py  test_tts_server.py
