[project]
name = "local-ai-brain"
version = "0.1.17"
description = "Local AI API hosting on Apple Silicon (MLX)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "kokoro-onnx>=0.5.0",
    "loguru>=0.7.3",
    "mlx-whisper>=0.4.3",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-prometheus>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "psutil>=7.2.2",
    "prometheus-client>=0.21.1",
    "pydantic-settings>=2.14.0",
    "soundfile>=0.13.1",
    "uvicorn>=0.46.0",
    "llama-cpp-python[server]",
    "httpx>=0.28.1",
    "python-multipart>=0.0.29",
    "pyyaml>=6.0.1",
]

[project.scripts]
local-brain = "local_ai_brain.cli:main"

[tool.uv]
package = true

[tool.uv.sources]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
